; ModuleID = '/home/carl/AnghaBench/tg/extr_interface.c_print_peer_name.c'
source_filename = "/home/carl/AnghaBench/tg/extr_interface.c_print_peer_name.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.in_ev = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @print_peer_name(%struct.in_ev* %0, i32 %1, i32* %2) #0 {
  %4 = alloca %struct.in_ev*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  store %struct.in_ev* %0, %struct.in_ev** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32* %2, i32** %6, align 8
  %7 = load i32, i32* %5, align 4
  %8 = call i32 @tgl_get_peer_type(i32 %7)
  switch i32 %8, label %29 [
    i32 128, label %9
    i32 130, label %14
    i32 131, label %19
    i32 129, label %24
  ]

9:                                                ; preds = %3
  %10 = load %struct.in_ev*, %struct.in_ev** %4, align 8
  %11 = load i32, i32* %5, align 4
  %12 = load i32*, i32** %6, align 8
  %13 = call i32 @print_user_name(%struct.in_ev* %10, i32 %11, i32* %12)
  br label %31

14:                                               ; preds = %3
  %15 = load %struct.in_ev*, %struct.in_ev** %4, align 8
  %16 = load i32, i32* %5, align 4
  %17 = load i32*, i32** %6, align 8
  %18 = call i32 @print_chat_name(%struct.in_ev* %15, i32 %16, i32* %17)
  br label %31

19:                                               ; preds = %3
  %20 = load %struct.in_ev*, %struct.in_ev** %4, align 8
  %21 = load i32, i32* %5, align 4
  %22 = load i32*, i32** %6, align 8
  %23 = call i32 @print_channel_name(%struct.in_ev* %20, i32 %21, i32* %22)
  br label %31

24:                                               ; preds = %3
  %25 = load %struct.in_ev*, %struct.in_ev** %4, align 8
  %26 = load i32, i32* %5, align 4
  %27 = load i32*, i32** %6, align 8
  %28 = call i32 @print_encr_chat_name(%struct.in_ev* %25, i32 %26, i32* %27)
  br label %31

29:                                               ; preds = %3
  %30 = call i32 @assert(i32 0)
  br label %31

31:                                               ; preds = %9, %14, %19, %24, %29
  ret void
}

declare dso_local i32 @tgl_get_peer_type(i32) #1

declare dso_local i32 @print_user_name(%struct.in_ev*, i32, i32*) #1

declare dso_local i32 @print_chat_name(%struct.in_ev*, i32, i32*) #1

declare dso_local i32 @print_channel_name(%struct.in_ev*, i32, i32*) #1

declare dso_local i32 @print_encr_chat_name(%struct.in_ev*, i32, i32*) #1

declare dso_local i32 @assert(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
